<resources>
    <string name="app_name">Neon Novels</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_create">Create</string>
    <string name="title_setting">Settings</string>
    <string name="title_details">Details</string>
    <string name="placeholder_title">The Power of the Saint is All Around</string>
    <string name="placeholder_synopsis">Sei, a 20 year old office worker was summoned to a different world after finishing some overtime work. But the person who had summoned her looked at her face and said, “This is not the Saint.” Is this neglect play!?

Sei left the royal palace and concealed her saint title. She started working at a laboratory where she made potions and cosmetics. She used her magic to grant people’s requests and slowly people began suspecting that she was a saint…

Can Sei enjoy her slow dreamy different world life without her saint title being found out?!

</string>
    <string name="thumbnail">thumbnail</string>

    <!--    CREATE PAGE XML STRING RESOURCES-->
    <string name="fragment_create_hint_title">Title</string>
    <string name="fragment_create_hint_thumbnail">Thumbnail</string>
    <string name="fragment_create_hint_synopsis">Synopsis</string>
    <string name="fragment_create_hint_genres">Genres, separated by commas(,)</string>
    <string name="fragment_create_hint_download">Download</string>
    <string name="fragment_create_hint_author">Author</string>
    <string name="fragment_create_hint_alias">Alias, separated by lines</string>
    <string name="fragment_create_button_submit">CREATE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>