<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="32dp"
    tools:context=".ui.create.CreateFragment">

    <EditText
        android:id="@+id/et_title_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_thumbnail_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_thumbnail"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_synopsis_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_synopsis"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:minLines="3" />

    <EditText
        android:id="@+id/et_genres_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_genres"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_download_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_download"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_author_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_author"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_alias_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_create_hint_alias"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button_submit_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_create_button_submit" />

</LinearLayout>
</ScrollView>