<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.knightshrestha.neonnovels.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_create"
            app:destination="@id/navigation_create" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.knightshrestha.neonnovels.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
    </fragment>

    <fragment
        android:id="@+id/navigation_create"
        android:name="com.knightshrestha.neonnovels.ui.create.CreateFragment"
        android:label="@string/title_create"
        tools:layout="@layout/fragment_create" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.knightshrestha.neonnovels.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="SeriesItem"
            app:argType="com.knightshrestha.neonnovels.datasources.local.dataclass.LocalSeriesItem" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.knightshrestha.neonnovels.ui.settings.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>